--- a/index.html
+++ b/index.html
@@ -76,13 +76,19 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">126;</td>
 							<td id="razmer">&nbsp;</td>
 							<td id="kolvo">&nbsp;</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
-						
+						<tr>
+							<td id="splav">126;</td>
+							<td id="razmer">&nbsp;</td>
+							<td id="kolvo">&nbsp;</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
