данные в табл от 12 августа 2014

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<section id="light_grey_part">
 			<div class="inner-wrapper">
 				<span>Проволока Х20Н80 ф 4 мм</span>
-				<span id="price"><img src="pics/price_icon.png" alt="">1080 руб/кг с НДС</span>
+				<span id="price"><img src="pics/price_icon.png" alt="">1070 руб/кг с НДС</span>
 			</div>
 		</section>
 		
@@ -75,20 +75,127 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td id="splav">126;</td>
-							<td id="razmer">&nbsp;</td>
-							<td id="kolvo">&nbsp;</td>
+					        <tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">0,36</td>
+							<td id="kolvo">42,34</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+					        <tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">1</td>
+							<td id="kolvo">7,96</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">126;</td>
-							<td id="razmer">&nbsp;</td>
-							<td id="kolvo">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
+							<td id="razmer">1,6</td>
+							<td id="kolvo">3,98</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">1,8</td>
+							<td id="kolvo">21,78</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">1,9</td>
+							<td id="kolvo">2,8</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">2</td>
+							<td id="kolvo">4</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">2,5</td>
+							<td id="kolvo">7,44</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">3</td>
+							<td id="kolvo">1,28</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">3,5</td>
+							<td id="kolvo">44,76</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">4</td>
+							<td id="kolvo">18,34</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">4,2</td>
+							<td id="kolvo">17,2</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">4,8</td>
+							<td id="kolvo">4,76</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">5</td>
+							<td id="kolvo">59,2</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">6</td>
+							<td id="kolvo">5,8</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">6,2</td>
+							<td id="kolvo">67,4</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">6,3</td>
+							<td id="kolvo">38,6</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>
+						<tr>
+							<td id="splav">&nbsp;</td>
+							<td id="razmer">8</td>
+							<td id="kolvo">99,4</td>
+							<td id="cena">&nbsp;</td>
+							<td id="primechan">&nbsp;</td>
+						</tr>	
 					</tbody>
 				</table>
 			</div>
