проба испр табл

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<td id="primechan">&nbsp;</td>
 						</tr>
 					        <tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">1</td>
 							<td id="kolvo">7,96</td>
 							<td id="cena">&nbsp;</td>
