--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">1,6</td>
 							<td id="kolvo">3,98</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">1,8</td>
 							<td id="kolvo">21,78</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">1,9</td>
 							<td id="kolvo">2,8</td>
 							<td id="cena">&nbsp;</td>
@@ -112,21 +112,21 @@
 						
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">2</td>
 							<td id="kolvo">4</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">2,5</td>
 							<td id="kolvo">7,44</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">3</td>
 							<td id="kolvo">1,28</td>
 							<td id="cena">&nbsp;</td>
@@ -134,63 +134,63 @@
 						</tr>
 						
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">3,5</td>
 							<td id="kolvo">44,76</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">4</td>
 							<td id="kolvo">18,34</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">4,2</td>
 							<td id="kolvo">17,2</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">4,8</td>
 							<td id="kolvo">4,76</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">5</td>
 							<td id="kolvo">59,2</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">6</td>
 							<td id="kolvo">5,8</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">6,2</td>
 							<td id="kolvo">67,4</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">6,3</td>
 							<td id="kolvo">38,6</td>
 							<td id="cena">&nbsp;</td>
 							<td id="primechan">&nbsp;</td>
 						</tr>
 						<tr>
-							<td id="splav">&nbsp;</td>
+							<td id="splav">Х20Н80</td>
 							<td id="razmer">8</td>
 							<td id="kolvo">99,4</td>
 							<td id="cena">&nbsp;</td>
