--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<meta name="google-site-verification" content="OQqUXJQW2s95vUWPsi05JpBKVYmIT37fPUWDa8qOmKE" />
+		<meta name='yandex-verification' content='53dc17632a21d76f' />
 		<meta name='wmail-verification' content='4dee1e9276aa5416' />
 		<title>Продажа нихромовой проволки</title>
 		<link rel="stylesheet" href="main.css" type="text/css">
