--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<body>
 		<header id="main_header">
 			<div class="inner-wrapper">
-				<h1>ПКФ Стандарт-М</h1>
+				<h1>ООО "Вектор"</h1>
 				<div class="description">Оптовая и розничная продажа нихромовой проволоки</div>
-				<div class="phone">+7 (347) 266-75-68</div>
+				<div class="phone"><a href="tel://7-347-262-9052">+7 (347)262-90-42</a></div>
 			</div>
 		</header>
 		
@@ -29,7 +29,7 @@
 		<section id="light_grey_part">
 			<div class="inner-wrapper">
 				<span>Проволока Х20Н80 ф 4 мм</span>
-				<span id="price"><img src="pics/price_icon.png" alt="">1070 руб/кг с НДС</span>
+				<span id="price"><img src="pics/price_icon.png" alt="">1950 руб/кг с НДС</span>
 			</div>
 		</section>
 		
@@ -206,7 +206,7 @@
 		
 		<footer>
 			<div class="inner-wrapper">
-				
+				<address>ул. Достоевского 106, г. Уфа</address>
 			</div>
 		</footer>
 		
