Add the second phone number

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 			<div class="inner-wrapper">
 				<h1>ООО "Вектор"</h1>
 				<div class="description">Оптовая и розничная продажа нихромовой проволоки</div>
-				<div class="phone"><a href="tel://7-347-262-9052">+7 (347)262-90-42</a></div>
+				<div class="phone">
+          <a href="tel:7-347-262-9052">+7 (347)262-90-42</a>
+        </div>
+        <div class="phone second">
+          <a href="tel:7-347-287-1187">+7 (347)287-11-87</a>
+        </div>
 			</div>
 		</header>
 		
