--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
         <div class="phone second">
           <a href="tel:7-347-287-1187">+7 (347)287-11-87</a>
+          <a href="tel:7-347-287-1187">+7 (347)287-11-87</a>
         </div>
 			</div>
 		</header>
