--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="google-site-verification" content="OQqUXJQW2s95vUWPsi05JpBKVYmIT37fPUWDa8qOmKE" />
 		<meta name='yandex-verification' content='53dc17632a21d76f' />
 		<meta name='wmail-verification' content='4dee1e9276aa5416' />
-		<title>Продажа нихромовой проволки</title>
+		<title>Цветной металлопрокат</title>
 		<link rel="stylesheet" href="main.css" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	</head>
@@ -15,7 +15,7 @@
 		<header id="main_header">
 			<div class="inner-wrapper">
 				<h1>ООО "Вектор"</h1>
-				<div class="description">Оптовая и розничная продажа нихромовой проволоки</div>
+				<div class="description">Оптовая и розничная продажа цветного маталла</div>
 				<div class="phone">
           <a href="tel:7-347-262-9052">+7 (347)262-90-42</a>
         </div>
