ОТгрузка от 1 кг

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<section class="short-block">
 			<div class="short-block-inner">
-				Отгрузка проволоки Х20Н80 от 1 кг
+				Отгрузка от 1 кг
 			</div>
 		</section>
 		
