--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		
 		<section class="short-block" id="wire_available">
 			<div class="short-block-inner">
-				Нихромовая проволока Х20Н80 в наличии на складе
+				В наличии на складе
 			</div>
 		</section>
 		
